[package]
name = "oxibase"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["oxibase_proc_macro/"]

[features]
default = ["backend"]
backend = ["detour", "platform_lib"]
all_ccs = []

[dependencies]
#oxibase_proc_macro = { path = "oxibase_proc_macro/" }

paste = "1"
ctor = "0.1"

once_cell = "1"
lazy_static = "1"

parking_lot = { version = "0.11", features = ["nightly"] }
dashmap = "4"

slotmap = "1"

detour = { version = "0.8", optional = true }

[target.'cfg(windows)'.dependencies]
platform_lib = { package = "winapi", version = "0.3", optional = true, features = ["libloaderapi", "memoryapi", "errhandlingapi"] }

[target.'cfg(not(windows))'.dependencies]
platform_lib = { package = "libc", version = "0.2", optional = true }
